# TALLER1

./: CMakeLists.txt  COMANDOS PARA CORRER EL JUEGO  Makefile  readme.md
src/: client.cpp  client.h  main.cpp  server.cpp  server.h
src/Client/: clientenemy.cpp  clientenemy.h  clientlevel.cpp  clientlevel.h  clientplatform.cpp  clientplatform.h  clientplayer.cpp  clientplayer.h  clientsurprise.cpp  clientsurprise.h  login.cpp  login.h  mapstate.cpp  mapstate.h  receiver.cpp  receiver.h  renderer.cpp  renderer.h  scoreboard.cpp  scoreboard.h  sender.cpp  sender.h  sound.cpp  sound.h
src/Common/: command.cpp  command.h  config.cpp  config.h  gamestate.cpp  gamestate.h  logger.cpp  logger.h  socket.cpp  socket.h  thread.cpp  thread.h
src/Common/TinyXML2/: tinyxml2.cpp  tinyxml2.h
src/Server/: accepter.cpp  accepter.h  connection.cpp  connection.h  enemy.cpp  enemy.h  level.cpp  level.h  map.cpp  map.h  model.cpp  model.h  platform.cpp  platform.h  player.cpp  player.h  surprise.cpp  surprise.h  validator.cpp  validator.h
